--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
   --purple: #411583;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
+  font-family: 'Cantarell', 'Inter', system-ui;
   display: grid;
   place-items: center;
   background-color: var(--bg-2);
@@ -28,6 +33,8 @@ body {
 
   .playlist-icon {
     margin-left: auto;
+    width: 275px;
+    height: 275px;
   }
 
   .music-bars {
@@ -42,6 +49,8 @@ body {
 }
 
 .controls-box {
+  margin: auto;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,5 +70,42 @@ body {
 
   .controls {
     margin: 2em 0;
+
+    & button {
+      border: none;
+      background-color: transparent;
+    }
+  }
+}
+
+.status-box {
+  text-align: center;
+  color: #411583;
+  background-color: #ececf3;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: none;
+
+  progress {
+    width: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    color: #411583;
+  }
+
+  progress::-moz-progress-bar {
+    background: #411583;
+  }
+}
+
+.music-bars {
+  display: flex;
+  justify-content: space-between;
+  & p {
+    color: white;
   }
 }
